[package]
name = "solana-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "1.16"
spl-token = "4.0"
spl-associated-token-account = "2.3.0"
bs58 = "0.5"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
